2005-10-24  Andreas Kupries <andreask@activestate.com>

	* csv.bench: New file. Basic benchmarks for CSV processing.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-09-30  Andreas Kupries <andreask@activestate.com>

	* pkgIndex.tcl: Added command 'csv::joinmatrix', which converts a
	* csv.man:      matrix object into CSV records, one record per
	* csv.tcl:      row. Inspired by [SF Tcllib RFE 1204345] which
	                brought the conversion up, but went a round-about
			way via a report object.

2005-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.test: Testsuite package requirements fixed to ensure use of
	  local packages.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.tcl: Updated version number to sync with 1.6.1
	* csv.man: release.
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.tcl: Rel. engineering. Updated version number 
	* csv.man: of csv to reflect its changes, to 0.5.1.
	* pkgIndex.tcl:

2004-05-03  Andreas Kupries  <andreask@pliers.activestate.com>

	* csv.tcl (read2matrix): Fixed bogus switch case. Had case "4"
	  twice, second should have been "5". [SF Tcllib Bug 940651].

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-11-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.man: Extended the explanation for the example to cover the
	  alternate format as well [SF Tcllib RFE 737770].

2003-05-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
