@@ -1,3 +1,10 @@
+2006-01-16  Andreas Kupries  <akupries@shaw.ca>
+
+	* csv.man: New command 'iscomplete' to detect partial csv
+	* csv.tcl: records. Used to enable the read2* commands to handle
+	  multi-line csv records. Code provided by Jeff Hobbs, via [SF
+	  Tcllib Patch 1407811].
+
 2005-10-24  Andreas Kupries <andreask@activestate.com>
 
 	* csv.bench: New file. Basic benchmarks for CSV processing.
